# issue-resolver

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
.claude/agents/engineering/: ai-orchestrator.md  cli-architect.md  devops-automator.md  github-specialist.md
.claude/agents/operations/: analytics-reporter.md  cost-optimizer.md
.claude/agents/product/: feedback-synthesizer.md  sprint-prioritizer.md
.claude/agents/project-management/: project-shipper.md
.claude/agents/testing/: integration-tester.md  test-results-analyzer.md  workflow-optimizer.md
.github/workflows/: ci.yml
specs/001-ai-issue-resolver/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-issue-resolver/checklists/: requirements.md
specs/001-ai-issue-resolver/contracts/: claude-output.md  cli-commands.md
src/issue_resolver/: __init__.py  __main__.py
src/issue_resolver/claude/: invoker.py  parser.py  prompts.py
src/issue_resolver/cli/: __init__.py  config_cmd.py  console.py  context.py  exit_codes.py  resolve.py  run.py  scan.py  status.py
src/issue_resolver/config/: loader.py  schema.py
src/issue_resolver/db/: engine.py  repository.py
src/issue_resolver/github/: client.py  pr.py  repo_ops.py  search.py
tests/: conftest.py
tests/integration/: test_cli_config.py  test_cli_resolve.py  test_cli_run.py  test_cli_scan.py  test_cli_status.py
tests/unit/: test_claude_parser.py  test_config.py  test_db.py  test_github_search.py  test_models.py  test_pipeline.py  test_project_detector.py
(+22 files in other folders)
